visible mocks enabled, styles fix

--- a/client/gallery/gallery.less
+++ b/client/gallery/gallery.less
@@ -172,7 +172,7 @@ gallery {
     top: 0;
     left: 0;
     width: 100%;
-    height: 40px;
+    height: 30px;
     background-color: rgba(50,50,50, 0.9);
     z-index: 1;
     box-sizing: border-box;
@@ -182,9 +182,9 @@ gallery {
 
   .nav_bar_btn {
     border: none;
-    height: 40px;
+    height: 30px;
     display: inline-block;
-    font-size: 20px;
+    font-size: 15px;
     color: #fff;
     padding: 5px 20px;
     text-align: center;
